# snort

./: ChangeLog  Makefile.in  RELEASE.NOTES  aclocal.m4  config.h.in  configure  configure.in
.github/workflows/: codeql.yml
doc/: INSTALL  Makefile.am  Makefile.in  README  README.hpfeeds  snort_manual.tex
etc/: Makefile.in  file_magic.conf  gen-msg.map  snort.conf
m4/: Makefile.in
preproc_rules/: Makefile.in  preprocessor.rules
rpm/: Makefile.in  snort.spec
src/: Makefile.am  Makefile.in  active.c  active.h  build.h  decode.c  decode.h  detect.c  detect.h  detection_util.c  detection_util.h  encode.c  encode.h  event.h  event_queue.c  event_wrapper.c  fpcreate.c  fpdetect.c  generators.h  log.c  log.h  parser.c  parser.h  plugbase.c  plugbase.h  plugin_enum.h  ppm.c  preprocids.h  profiler.c  rule_option_types.h  sf_protocols.h  sf_sdlist.c  sf_sdlist.h  sfdaq.c  sfdaq.h  signature.h  snort.c  snort.h  snort_debug.h  strlcatu.h  (+3 more)
src/control/: Makefile.in
src/detection-plugins/: Makefile.am  Makefile.in  detection_options.c  sp_base64_decode.c  sp_clientserver.c  sp_file_type.c  sp_flowbits.c  sp_ftpbounce.c  sp_pattern_match.c  (+2 more)
src/preprocessors/Stream5/: Makefile.am  Makefile.in  snort_stream5_icmp.c  snort_stream5_icmp.h  snort_stream5_ip.c  snort_stream5_ip.h  snort_stream5_session.c  snort_stream5_session.h  snort_stream5_tcp.c  snort_stream5_tcp.h  snort_stream5_udp.c  snort_stream5_udp.h  stream5_common.c  stream5_common.h  stream5_ha.c  stream5_ha.h  stream5_paf.c  stream5_paf.h
templates/: Makefile.in
tools/: Makefile.am  Makefile.in
(+292 files in other folders)
